# pathfinder-discord-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pathfinder_discord_bot/: bot.py
pathfinder_discord_bot/cogs/: __init__.py  ask.py  dice.py
pathfinder_discord_bot/config/: __init__.py  settings.py
pathfinder_discord_bot/database/: __init__.py  models.py  mongodb_service.py
pathfinder_discord_bot/services/: __init__.py  claude_service.py  dice_service.py  embedding_service.py  pdf_parser.py
pathfinder_discord_bot/utils/: __init__.py  dice_parser.py  embeds.py  rate_limiter.py  text_chunker.py
scripts/: ingest_rulebooks.py  test_chunking.py  test_embeddings.py  test_pdf_extraction.py  test_search.py
